# Python-projects

./: readme.md
Desafio-MostQI-Python/: .env.sample  pyproject.toml
Desafio-MostQI-Python/src/: app.py
Desafio-MostQI-Python/src/api/: roboApi.py
Desafio-MostQI-Python/src/core/: settings.py
Desafio-MostQI-Python/src/service/: roboService.py
Desafio-MostQI-Python/src/utils/: util.py
chatBot/: main.py  requirements.txt
emails/: main.py
selenium/: main.py  projetos.txt
